--- a/public/help.html
+++ b/public/help.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Index From static</title>
+		<title>Help</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
@@ -9,6 +9,6 @@
 		<link href="/styles/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>From static</h1>
+		<h1>Help</h1>
 	</body>
 </html>
