--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 		<link href="/styles/styles.css" rel="stylesheet">
 	</head>
 	<body>
-		<h1>From static</h1>
+		<div class="content">
+			<h1>From static</h1>
+		</div>
+		<script src="/js/index.js"></script>
 	</body>
 </html>
